Fix cropping logo on Safari

--- a/src/scss/components/_components.logo.scss
+++ b/src/scss/components/_components.logo.scss
@@ -3,7 +3,7 @@
   height: 1em;
 
   svg {
-    max-height: 100%;
+    max-height: 99%;
     width: auto;
     fill: currentColor !important;
   }
